# Gestor_Gastos

./: .gitignore  CMakeLists.txt  HOW_TO_CMAKE.MD  HOW_TO_GIT_GITFLOW.md  HOW_TO_VCPKG.MD  README.md  test_gestor_gastos
.github/workflows/: tests.yml  validar_nome_branch.yml
app/: constantes.hpp  main.cpp
app/back_end/: back_end.cpp  back_end.hpp
app/back_end/test/: test_validate_age.cpp  test_validate_birthdate.cpp  test_validate_cpf.cpp  test_validate_name.cpp  test_validate_salary.cpp
app/dados/: dados.cpp  dados.hpp  estructs_dados.hpp  structs_dados.hpp
app/front_end/: front_end.cpp  front_end.hpp
